<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="232dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/agrofer_sin_fondo"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="355dp"
        android:layout_height="522dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/createCount"
            android:textColor="#018037"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/md_grey_500_25"
            android:fontFamily="sans-serif-black"
            android:text="@string/cta"
            android:textColor="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctaConfContrasenia"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ctaCorreo"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="#018037"
            android:hint="@string/correo"
            android:textColorHint="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctaSurname"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ctaConfContrasenia"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="#018037"
            android:hint="@string/configPass"
            android:textColorHint="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctaContrasenia"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ctaSurname"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="#018037"
            android:hint="@string/surname"
            android:textColorHint="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctaName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ctaName"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="#018037"
            android:hint="@string/name"
            android:textColorHint="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ctaContrasenia"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="#018037"
            android:hint="@string/password"
            android:textColorHint="#018037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctaCorreo"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>