<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UserFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:src="@mipmap/agrofer_recortado" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="338dp"
            android:layout_height="47dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/datosUser"
            android:textColor="#018037"
            android:textSize="25sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="596dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="-17dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/usName"
                    android:textColor="#018037"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/usApellido"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/usSurname"
                    android:textColor="#018037"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/usEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/usEmail"
                    android:textColor="#018037"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/usPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/usPass"
                    android:inputType="textPassword"
                    android:textColor="#018037"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>