<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InfoTiendaFragment">


    <RelativeLayout
        android:id="@+id/relativeLy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lyPrincipal"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/dva"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/imgViewDVA"
                android:layout_width="380dp"
                android:layout_height="114dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="0dp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrolProductos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/lyPrincipal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center"
                            android:text="@string/txt1"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/text11"
                            android:textColor="#000000" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="206dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="265dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="265dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="268dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pro6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="270dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>